# test-be-new

./: alembic.ini  main.py  pyproject.toml
alembic/data/: students.json
alembic/versions/: 0df457f21082_move_is_active_form_profile_to_user_.py  dc7d2c7cb314_.py
api/: courses.py  users.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
