[tool.poetry]
name = "fast-api-test"
version = "0.1.0"
description = ""
authors = ["Aditya Irvan <adityairvanku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.1"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
